--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,16 @@
 
 body {
     font-family: 'Rubik Mono One', sans-serif;
+    text-align: center;
 }
 
 .container {
+    position: relative;
     width: 100%;
     height: 100vh;
+}
+.desc {
+    color: yellow;
 }
 
 /* Main */
@@ -23,4 +28,19 @@ body {
 }
 #yellow {
     background-color: yellow;
+}
+
+.article {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40%;
+}
+.scarpa {
+    width: 100%;
+}
+
+#yellow .desc {
+    color: green;
 }
