--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    position: relative;
     font-family: 'Rubik Mono One', sans-serif;
     text-align: center;
 }
@@ -17,6 +18,29 @@ body {
 }
 .desc {
     color: yellow;
+}
+
+/* Menu */
+#menu {
+    position: fixed;
+    right: 0;
+    z-index: 1;
+}
+#menu li {
+    list-style: none;
+    display: inline-block;
+}
+#menu a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    margin: 40px 15px;
+    border-radius: 50%;
+    background-color: white;
+    box-shadow: 1px 1px 5px;
+    text-decoration: none;
+    color: black;
 }
 
 /* Main */
